<resources>
    <string name="app_name">ProjectResourceManager</string>
    <string name="Open">open</string>
    <string name="Close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_name_edittxt">Project name</string>
    <string name="save">Save</string>
    <string name="choose_gallery_or_camera">Choose from:</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="your_text">Your text</string>
    <string name="no_data">No data</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
</resources>
