<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ViewAudioData"
        android:orientation="vertical"
        android:padding="8dp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <com.keenfin.audioview.AudioView
                    android:id="@+id/view_audio_data_audioView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/title"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/view_audio_data_title"
                    android:text="@string/no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="20sp"/>

            <TextView
                    android:text="@string/description"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/view_audio_data_description"
                    android:text="@string/no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="18sp"
                    android:lines="6"/>

            <TextView
                    android:text="@string/notes"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/view_audio_data_notes"
                    android:text="@string/no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="18sp"
                    android:lines="4"/>



            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
            >
                <Button
                        android:text="@string/edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_audio_data_button"/>

                <Button
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cancel_action_audio_view_button"/>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>