<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddVideoData"
        android:orientation="vertical"
        android:padding="8dp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <VideoView android:layout_width="match_parent"
                       android:layout_gravity="center"
                       android:layout_height="400dp"
                       android:padding="8dp"
                       android:contentDescription="@string/image"
                       android:id="@+id/videoView_add_video_data"
                       tools:srcCompat="@drawable/ic_image"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_video_data_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/add_video_data_title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_video_data_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/add_video_data_description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="6"
                        android:hint="@string/description"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_video_data_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/add_video_data_notes_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="4"
                        android:hint="@string/notes"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
            >
                <Button
                        android:text="@string/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/save_video_data_button"/>

                <Button
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cancel_video_image_data_button"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>