<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddPictureData"
        android:orientation="vertical"
        android:padding="8dp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <ImageView android:layout_width="match_parent"
                       android:layout_height="400dp"
                       android:padding="8dp"
                       android:contentDescription="@string/image"
                       android:id="@+id/add_picture_data_image"
                       tools:srcCompat="@drawable/ic_image"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_picture_data_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/add_picture_data_title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_picture_data_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/add_picture_data_description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="6"
                        android:hint="@string/description"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_picture_data_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/add_picture_data_notes_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="4"
                        android:hint="@string/notes"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:text="@string/save"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_image_data_button"/>
        </LinearLayout>
    </ScrollView>








</LinearLayout>